tests/snapshots/snapshot_tests__groups.snap
---
source: tests/snapshot_tests.rs
description: MyInfo → press Enter (Group View)
expression: output
---
                                     Groups

┌ View Mode ───────────────────────────────────────────────────────────────────┐
│ [x] Members                                                                  │
│     Which contacts are in each group                                         │
│ [ ] Visibility                                                               │
│     Which of your fields each group sees                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌─ Groups ─────────────────────────────────────────────────────────────────────┐
│   group Family   3 members                                                   │
│   group Friends  4 members                                                   │
│   group Work     3 members                                                   │
└──────────────────────────────────────────────────────────────────────────────┘









[Space] select  [Enter] New Group  [Enter] Rename Group  [Enter] Delete Group
   1 Exchange   │  2 ★ MyInfo   │  3 Contacts   │  4 Settings   │    5 Help
