tests/snapshots/snapshot_tests__home_with_fields.snap
---
source: tests/snapshot_tests.rs
assertion_line: 154
expression: output
---
Home

────────────────────────────────────────────────────────────────────────────────
                                      Home

┌──────────────────────────────────────────────────────────────────────────────┐
│ setup Complete your setup — 1 of 6 steps done                                │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Contacts ────────────────────────────────────────────────────────────────────┐
│  No contacts yet                                                             │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘







                                 [a] Add Contact

────────────────────────────────────────────────────────────────────────────────
[a] Add Contact  [Esc] back  [q]uit
