tests/snapshots/snapshot_tests__lock_screen_edited.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                              * Enter Password *

┌──────────────────────────────────────────────────────────────────────────────┐
│Password                                                                      │
│                                                                              │
│  ○ ○ ○ ○ ○ ○                                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
