tests/snapshots/snapshot_tests__my_info_entry_detail.snap
---
source: tests/snapshot_tests.rs
description: MyInfo → press Enter on entry
expression: output
---
                                   Alice Smith

┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ Email alice@company.com (Work)                                             │
│   Phone +41 79 123 45 67 (Mobile)                                            │
│   Website https://alice.example.com (Blog)                                   │
└──────────────────────────────────────────────────────────────────────────────┘















[a] Add Entry  [Enter] Group View  [?] help  [Esc] back  [q] quit
   1 Exchange   │  2 ★ MyInfo   │  3 Contacts   │  4 Settings   │    5 Help
