tests/snapshots/snapshot_tests__recovery.snap
---
source: tests/snapshot_tests.rs
expression: output
---
Recovery

────────────────────────────────────────────────────────────────────────────────
┌Status────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│Recovery                                                                      │
│                                                                              │
│  No active recovery claim                                                    │
│                                                                              │
│  Press [c] to create a recovery claim if needed                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Actions───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [c] Create recovery claim                                                   │
│  [v] Vouch for a contact's recovery                                          │
│  [s] Check recovery status                                                   │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
                      c Claim  v Vouch  s Status  Esc Back
────────────────────────────────────────────────────────────────────────────────
[c]laim  [v]ouch  [s]tatus  [esc] back  [?]help
