tests/snapshots/snapshot_tests__settings.snap
---
source: tests/snapshot_tests.rs
assertion_line: 179
expression: output
---
Settings

────────────────────────────────────────────────────────────────────────────────

 ┌Identity────────────────────────────────────────────────────────────────────┐
 │Display Name: Alice Smith  [press n to edit]                                │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │Public ID: [PUBLIC_ID]...                                              │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌Sync Server─────────────────────────────────────────────────────────────────┐
 │Relay: wss://relay.vauchi.app  [press u to edit]                            │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │Options:                                                                    │
 │  [n] Edit display name                                                     │
 └────────────────────────────────────────────────────────────────────────────┘

────────────────────────────────────────────────────────────────────────────────
[n]ame  [b]ackup  [d]evices  [r]ecovery  [p]rivacy  [s]upport  [←/→] theme  [esc
