tests/snapshots/snapshot_tests__settings_edited.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                                  * Settings *

┌ Profile ─────────────────────────────────────────────────────────────────────┐
│ ▸ Display Name  Alice Smith                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Privacy ─────────────────────────────────────────────────────────────────────┐
│   Delivery Receipts  [x]                                                     │
│   Suppress Presence  [ ]                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Security ────────────────────────────────────────────────────────────────────┐
│   Change Password  →                                                         │
│   Devices  1 device                                                          │
│   Duress PIN  →                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Network ─────────────────────────────────────────────────────────────────────┐
│   Relay URL                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Danger Zone ─────────────────────────────────────────────────────────────────┐
│   Emergency Wipe  Wipe All Data                                              │
└──────────────────────────────────────────────────────────────────────────────┘

[?] help  [Esc] back  [q] quit
  1 Exchange  │ 2 ★ MyInfo  │ 3 Contacts  │ 4 Settings │  5 Help  │  [q] Quit
