tests/snapshots/snapshot_tests__setup_ready.snap
---
source: tests/snapshot_tests.rs
description: SetupSecurity → press Next
expression: output
---
                            [1/9]  ● ○ ○ ○ ○ ○ ○ ○ ○
                                Welcome to Vauchi
                           Your contacts, your rules.

┌ Why Vauchi? ─────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [*] Private                                                                 │
│      End-to-end encrypted contact cards                                      │
│                                                                              │
│  [~] Always up to date                                                       │
│      Update your card and contacts see changes automatically                 │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘










[Enter] Get Started
