tests/snapshots/snapshot_tests__setup_screen.snap
---
source: tests/snapshot_tests.rs
assertion_line: 141
expression: output
---
Vauchi - Welcome to Vauchi

────────────────────────────────────────────────────────────────────────────────
                                Welcome to Vauchi
                         Privacy-focused contact cards.

┌  ────────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [*] Private by design                                                       │
│      Your data is end-to-end encrypted and never leaves your control.        │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘







         [Enter] I already have an identity  [Enter] Create new identity

────────────────────────────────────────────────────────────────────────────────
[Enter] I already have an identity  [Enter] Create new identity  [Esc] back  [q]
